--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "mapbox-gl": "^0.49.0-beta.1",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.2",
-    "react-mapbox-gl": "^3.9.2",
-    "react-palm": "^1.3.1",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "react-mapbox-gl": "^3.9.2"
   },
   "devDependencies": {
     "axios": "^0.18.0",
